formas code swagger. Looking for auto test plugin.
